--- a/index.css
+++ b/index.css
@@ -1,503 +1,548 @@
-@import url('https://fonts.googleapis.com/css2?family=Explora&family=Lora:ital,wght@0,500;1,400&family=Noto+Serif:ital,wght@0,100;0,200;1,100;1,200;1,500;1,600;1,700;1,800&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Explora&family=Lora:ital,wght@0,500;1,400&family=Noto+Serif:ital,wght@0,100;0,200;1,100;1,200;1,500;1,600;1,700;1,800&display=swap");
 
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    list-style-type: none;
-    font-family: Dm sans, sans-serif;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  list-style-type: none;
+  font-family: Dm sans, sans-serif;
 }
 
 .root {
-    --primary-color: #27AE60;
-    --secondary-color: #4f4f4f;
-    --gray2-color: #828282;
-    --grey3-color: #212121;
-    --white: #fff;
-
+  --primary-color: #27ae60;
+  --secondary-color: #4f4f4f;
+  --gray2-color: #828282;
+  --grey3-color: #212121;
+  --white: #fff;
 }
 
 body {
-    background: #171717;
-    color: #fff
+  background: #171717;
+  color: #fff;
 }
+nav {
+  background: #171717;
+  color: #fff;
+  position: fixed;
+  width: 100%;
+  top: 0;
+  left: 0;
+  z-index: 100;
+  transition: 0.5s;
 
+}
 #nav-header {
-    font-size: 2rem;
+  font-size: 2rem;
 }
 
 nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 30px 70px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 30px 70px;
+}
+#check,
+.checkbtn {
+  display: none;
+  font-size: 20px;
 }
 
 .nav-lists {
-    display: flex;
-    gap: 40px;
-    list-style-type: none;
-    /* border: 5px solid red; */
+  display: flex;
+  gap: 40px;
+  list-style-type: none;
+  /* border: 5px solid red; */
 }
 
 .nav-lists li a {
-    width: 100%;
-    text-decoration: none;
-    color: white;
-    margin: 2em;
-    cursor: pointer;
-    font-size: 1rem;
-    transition: 1.5s;
-    z-index: 1;
+  width: 100%;
+  text-decoration: none;
+  color: white;
+  margin: 2em;
+  cursor: pointer;
+  font-size: 1rem;
+  transition: 1.5s;
+  z-index: 1;
 }
 
 .nav-lists li a:hover {
-    border-bottom: 8px solid rgb(128, 58, 0);
+  border-bottom: 8px solid rgb(128, 58, 0);
 }
 
+/* hero  */
 .hero {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin: 80px 90px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 80px 90px;
 }
 
-.hero>img {
-    width: 500;
-    height: 500px;
-    border-radius: 50%;
-    display: inline-block;
+.hero > img {
+  width: 500;
+  height: 500px;
+  border-radius: 50%;
+  display: inline-block;
 }
 
 .hero-content {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
 }
 
-.hero-content>h2 {
-    font-size: 50px;
+.hero-content > h2 {
+  font-size: 50px;
 }
 
-.hero-content>p {
-    color: rgba(79, 79, 79, 1);
-    font-size: 20px;
+.hero-content > p {
+  color: rgba(79, 79, 79, 1);
+  font-size: 20px;
 }
 
 .button {
-    display: flex;
-    justify-content: cover;
+  display: flex;
+  justify-content: cover;
 }
 
 .download {
-    width: 110px;
-    height: 40px;
-    background-color: transparent;
-    border: 1px solid green;
-    color: var(--white);
-    cursor: pointer;
-    transition: opacity .2s;
-
-
-
+  width: 110px;
+  height: 40px;
+  background-color: transparent;
+  border: 1px solid green;
+  color: var(--white);
+  cursor: pointer;
+  transition: opacity 0.2s;
 }
 
 .download:hover {
-    background-color: green;
+  background-color: green;
 }
 
 .download:active {
-    opacity: 0.5;
-    background-color: lightgreen;
+  opacity: 0.5;
+  background-color: lightgreen;
 }
 
 .learn {
-    width: 110px;
-    height: 40px;
-    background: none;
-    border: 1px solid white;
-    color: var(--white);
-    cursor: pointer;
-    transition: opacity .2s;
-
+  width: 110px;
+  height: 40px;
+  background: none;
+  border: 1px solid white;
+  color: var(--white);
+  cursor: pointer;
+  transition: opacity 0.2s;
 }
 
 .learn:hover {
-    background-color: green;
+  background-color: green;
 }
 
 .learn:active {
-    opacity: .2s;
-    background-color: rgb(0, 255, 115);
+  opacity: 0.2s;
+  background-color: rgb(0, 255, 115);
 }
 
 #About {
-    text-align: center;
+  text-align: center;
 }
 
 .About-title {
-    width: 745px;
-    margin: auto;
+  width: 745px;
+  margin: auto;
 }
 
-
-
 .top {
-    text-align: center;
-    font-size: 30px;
-    margin-bottom: 15px;
-    border: red;
-
+  text-align: center;
+  font-size: 30px;
+  margin-bottom: 15px;
+  border: red;
 }
 
 .lorem {
-    font-size: 15px;
-    text-align: center;
-    font-family: DM Sans;
-    padding: 0 20px;
-    font-size: 15px;
+  font-size: 15px;
+  text-align: center;
+  font-family: DM Sans;
+  padding: 0 20px;
+  font-size: 15px;
 }
 
 .about-container {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    gap: 150px;
-    padding: 0 100px;
-    width: fit-content;
-    margin-top: 50px;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 150px;
+  padding: 0 100px;
+  width: fit-content;
+  margin-top: 50px;
 }
-
 
 .about-card {
-    text-align: center;
+  text-align: center;
 }
-
 
 #what i do {
-    align-items: center;
-
+  align-items: center;
 }
 
-.section-2>h2 {
-    text-align: center;
-    padding-top: 80px;
-    margin-top: 20px;
-    padding-bottom: 80px;
-    font-size: 2rem;
+.section-2 > h2 {
+  text-align: center;
+  padding-top: 80px;
+  margin-top: 20px;
+  padding-bottom: 80px;
+  font-size: 2rem;
 }
 
 .what-i-do {
-    display: grid;
-    grid-template-columns: repeat(3, 30%);
-    justify-content: center;
-    grid-column-gap: 89px;
-    padding: 0 40px;
-    /* border: 3px solid red; */
-    margin: 20px 83px;
-    /* border: 2px solid red; */
+  display: grid;
+  grid-template-columns: repeat(3, 30%);
+  justify-content: center;
+  grid-column-gap: 89px;
+  padding: 0 40px;
+  /* border: 3px solid red; */
+  margin: 20px 83px;
+  /* border: 2px solid red; */
 }
 
-
 .what-i-do-list {
-    width: 259px;
-    height: 190px;
-    padding: 35px 40px 0 50px;
-    font-size: 26px;
-    background-color: #212121;
-    border: 1px solid #000;
+  width: 259px;
+  height: 190px;
+  padding: 35px 40px 0 50px;
+  font-size: 26px;
+  background-color: #212121;
+  border: 1px solid #000;
 }
 
 .what-i-do-list:hover {
-    border-bottom: 5px solid #27AE60;
+  border-bottom: 5px solid #27ae60;
 }
 
-.what-i-do-list>img {
-    width: 45px;
-    height: 46.474px;
+.what-i-do-list > img {
+  width: 45px;
+  height: 46.474px;
 }
 
-.what-i-do-list>p {
-    color: #535353;
+.what-i-do-list > p {
+  color: #535353;
 }
-
 
 .sed {
-    text-align: center;
-    padding-top: 80px;
-    padding-bottom: 80px;
-    font-size: 2rem;
+  text-align: center;
+  padding-top: 80px;
+  padding-bottom: 80px;
+  font-size: 2rem;
 }
 
 .tip {
-    display: flex;
-    background-color: #212121;
-    justify-content: space-between;
-    padding: 95px;
-    align-items: center;
-    border: 1px solid #333333;
-    margin-right: 70px;
-    margin-left: 70px;
-    height: 190px;
-
+  display: flex;
+  background-color: #212121;
+  justify-content: space-between;
+  padding: 95px;
+  align-items: center;
+  border: 1px solid #333333;
+  margin-right: 70px;
+  margin-left: 70px;
+  height: 190px;
 }
 
 .top h2 {
-    color: rgba(51, 51, 51, 1);
-    font-size: 70px;
+  color: rgba(51, 51, 51, 1);
+  font-size: 70px;
 }
 
 .top p {
-    color: rgba(39, 174, 96, 1);
-    font-size: 20px;
+  color: rgba(39, 174, 96, 1);
+  font-size: 20px;
 }
 
 form {
-    /* border: 2px solid red; */
-    width: 700px;
-    margin: auto;
-    padding: 20px;
+  /* border: 2px solid red; */
+  width: 700px;
+  margin: auto;
+  padding: 20px;
 }
 
 .get {
-    text-align: center;
-    padding-bottom: 80px;
-    padding-top: 80px;
-    font-size: 30px;
+  text-align: center;
+  padding-bottom: 80px;
+  padding-top: 80px;
+  font-size: 30px;
 }
 
 .pen {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 60px;
-    border: 3px solid rgba(79, 79, 79, 1);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 60px;
+  border: 3px solid rgba(79, 79, 79, 1);
 }
 
 .nive {
-    display: flex;
-    /* border: 2px solid red; */
-    gap: 50px;
+  display: flex;
+  /* border: 2px solid red; */
+  gap: 50px;
 }
 
-.sub-container>input {
-    display: grid;
-    /* align-items: center; */
-    /* grid-template-columns: repeat(2, 1fr); */
-    /* margin-left: 160px; */
-    border: none;
-    background-color: transparent;
-    border-bottom: 3px solid rgba(79, 79, 79, 1);
-    padding-top: 20px;
-    padding-bottom: 12px;
-    font-size: 14px;
-    color: #171717;
-    width: 280px;
+.sub-container > input {
+  display: grid;
+  border: none;
+  background-color: transparent;
+  border-bottom: 3px solid rgba(79, 79, 79, 1);
+  padding-top: 20px;
+  padding-bottom: 12px;
+  font-size: 14px;
+  color: #171717;
+  width: 280px;
 }
 
 .main-con {
-    display: flex;
-    gap: 50px;
+  display: flex;
+  gap: 50px;
 }
 
-.content>input {
-    display: grid;
-    /* margin-left: 160px; */
-    border: none;
-    background-color: transparent;
-    border-bottom: 3px solid rgba(79, 79, 79, 1);
-    padding-top: 20px;
-    padding-bottom: 12px;
-    font-size: 14px;
-    color: #171717;
-    width: 280px;
-    margin-top: 50px;
+.content > input {
+  display: grid;
+  border: none;
+  background-color: transparent;
+  border-bottom: 3px solid rgba(79, 79, 79, 1);
+  padding-top: 20px;
+  padding-bottom: 12px;
+  font-size: 14px;
+  color: #171717;
+  width: 280px;
+  margin-top: 50px;
 }
 
 .text {
-    align-items: center;
-    background-color: transparent;
+  align-items: center;
+  background-color: transparent;
 }
 
 textarea {
-    align-items: center;
-    background-color: transparent;
-    margin-top: 50px;
-    color: #535353;
-    width: 100%;
-    height: 80px;
-
+  align-items: center;
+  background-color: transparent;
+  margin-top: 50px;
+  color: #535353;
+  width: 100%;
+  height: 80px;
+  padding: 10px;
 }
 
-
-
 .loot {
-    background-color: rgba(39, 174, 96, 1);
-    width: 143px;
-    border: none;
-    align-items: center;
-    margin: auto;
-    padding: 10px 0;
-    cursor: pointer;
-    margin-top: 2em;
-    transition: opacity .2s;
+  background-color: rgba(39, 174, 96, 1);
+  width: 143px;
+  border: none;
+  align-items: center;
+  margin: auto;
+  padding: 15px 0;
+  cursor: pointer;
+  margin-top: 2em;
+  transition: opacity 0.2s;
+  border-radius: 10px;
+  font-size: 16px;
 }
 
 .loot:hover {
-    background-color: #00ff55;
+  background-color: #00ff55;
 }
 
 .loot:active {
-    opacity: .2s;
-    background-color: #27AE60;
+  opacity: 0.2s;
+  background-color: #27ae60;
 }
 
 footer p {
-
-    text-decoration: center;
-    color: rgba(79, 79, 79, 1);
-    margin-left: 560px;
-    margin-top: 80px;
+  text-align: center;
+  margin: 20px 0;
+  font-size: 18px;
+  color: rgba(79, 79, 79, 1);
 }
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 /* mobile views */
-@media only screen and (max-width:600px) {
+@media only screen and (max-width: 600px) {
+  /* nav */
+nav{
+  padding: 20px 10px;
+}
+  /* nav {
+    display: flex;
+    flex-direction: column;
+     gap: 10px; 
+  }
+   */
+  .nav-lists {
+   position: fixed;
+   top: 70px;
+   left: 300px;
+   bottom: 0;
+   background-color: #171717;
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   font-size: 20px;
+   width: 99%;
+   height: 70vh;
+   backdrop-filter: blur(10px);
+  }
+  .nav-lists a:hover{
+    background-color: #91d1a7;
+    padding: 10px;
+    border-radius: 10px;
+    color: #000;
+  }
 
-    /* navbar */
-    * {
-        border: solid blue;
-    }
+  .checkbtn {
+    display: block;
+  }
+  #check:checked ~ .nav-lists {
+    left: 0;
+  }
+  /* hero  */
+  .hero {
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: center;
+    margin: 80px 90px;
+  }
 
-    nav {
-        display: flex;
-        flex-direction: column;
-        gap: 10px;
+  .hero-image {
+    width: 300px;
+   }
+   
+    /* aspet-ratio: 1/3; */
+  /* } */ 
 
-    }
-    .nav-lists {
-        display: flex;
-        flex-direction: column;
-        gap: 5px;
-    }
+  /* about */
+  #About {
+    /* text-align: center; */
+    margin: 0;
+    /* border: 2px solid red; */
+  }
 
-    /* hero  */
-    .hero {
-        display: flex;
-        flex-direction: column-reverse;
-        align-items: center;
-        margin: 80px 90px;
-    }
+  .About-title {
+    width: 100%;
+    /* margin: auto; */
+  }
 
-    .hero>img {
-        width: 100%;
-        height: 500px;
-        border-radius: 50%;
-        display: inline-block;
-    }
+  .top {
+    text-align: center;
+    font-size: 20px;
+  }
 
-    /* about */
-    #About {
-        /* text-align: center; */
-        margin: 0;
-         /* border: 2px solid red; */
-    }
+  .lorem {
+    font-family: DM Sans;
+    width: 100%;
+  }
 
-    .About-title {
-        width: 100%;
-        /* margin: auto; */
-    }
-
-
-
-    .top {
-        text-align: center;
-        font-size: 20px;
-
-    }
-
-    .lorem {
-        font-family: DM Sans;
-        width: 100%;
-
-    }
-
-    .about-container {
-        display: grid;
-        grid-template-columns: repeat(1, 1fr);
-        gap: 50px;
-        padding: 0 100px;
-        width: 100%;
-    }
-
-    .what-i-do {
-        display: flex;
-        flex-direction: column;
-        grid-template-columns: repeat(1, 1fr);
-        gap: 10px;
-        align-items: center;
-        padding-left: -45px;
-    }
-
-    /* skill */
-    .sed {
-        display: flex;
-        margin-top: 80px;
-        flex-direction: column;
-        padding: 0 20px;
-
-    }
-
-    .tip {
-        display: flex;
-        flex-direction: column;
-
-        align-items: center;
-        gap: 30px;
-    }
-
-    .top h2 {
-        text-align: center;
-        font-size: 60px;
-    }
-
-    .top p {
-        font-size: 20px;
-    }
-
-    /*get  */
-    #Get-in-touch {
-        margin-top: 500px;
-    }
-
-    .get {
-        margin-top: 60px;
-
-    }
-
-    form {
-        margin-top: 40px;
-        width: 100%;
-        padding: 0 20px;
-    }
-
-    .nive {
-        display: flex;
-        flex-direction: column;
-        width: 100%;
-        gap: 30%;
-        /* padding-left: 1.5em; */
-    }
-
-    .main-con {
-        display: flex;
-        flex-direction: column;
-        width: 100%;
-        gap: 30%;
-        padding-left: -1.5em;
-    }
-    footer p{
-       text-align: center;
-      margin: 0;
-      padding-top: 10px;
-    }
+  .about-container {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    gap: 50px;
+    padding: 0 100px;
+    width: 100%;
+    place-content: center;
     
+  }
+
+  .what-i-do {
+    display: flex;
+    flex-direction: column;
+    grid-template-columns: repeat(1, 1fr);
+    gap: 10px;
+    align-items: center;
+    padding-left: -45px;
+  }
+
+  /* skill */
+  .sed {
+    display: flex;
+    margin-top: 80px;
+    flex-direction: column;
+    padding: 0 20px;
+  }
+
+  .tip {
+    display: flex;
+    flex-direction: column;
+    
+    width: 100%;
+    margin-inline: auto;
+    gap: 30px;
+
+  }
+
+  .top h2 {
+    text-align: center;
+    font-size: 60px;
+  }
+
+  .top p {
+    font-size: 20px;
+  }
+
+  /*get  */
+  #Get-in-touch {
+    margin-top: 500px;
+  }
+
+  .get {
+    margin-top: 60px;
+  }
+
+  form {
+    margin-top: 40px;
+    width: 100%;
+    padding: 0 20px;
+  }
+
+  .nive {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    gap: 30%;
+    /* padding-left: 1.5em; */
+  }
+  .nive input{
+    width: 100%;
+  }
+
+  .main-con {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    gap: 30%;
+    padding-left: -1.5em;
+  }
+  .main-con input{
+    width: 100%;
+  }
+  footer p {
+    text-align: center;
+    padding-top: 20px;
+    
+  }
 }
